After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688189 - idle-monitor: XSyncValue related compile-time warnings
idle-monitor: XSyncValue related compile-time warnings
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-12 17:02 UTC by Bastien Nocera
Modified: 2012-11-12 18:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
idle-monitor: XSyncValue related compile-time warnings (1.70 KB, patch)
2012-11-12 17:02 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-11-12 17:02:32 UTC
.
Comment 1 Bastien Nocera 2012-11-12 17:02:35 UTC
Created attachment 228795 [details] [review]
idle-monitor: XSyncValue related compile-time warnings

Avoid aggregate return warnings by transforming the _int64_to_xsyncvalue
function into a macro.

gnome-idle-monitor.c: In function '_int64_to_xsyncvalue':
gnome-idle-monitor.c:80:1: warning: function returns an aggregate [-Waggregate-return]
gnome-idle-monitor.c: In function '_xsync_alarm_set':
gnome-idle-monitor.c:115:26: warning: function call has aggregate value [-Waggregate-return]
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-11-12 17:05:55 UTC
Review of attachment 228795 [details] [review]:

Looks fine.
Comment 3 Bastien Nocera 2012-11-12 18:19:24 UTC
With a bunch more patches on top of that, and an API change.

Attachment 228795 [details] pushed as 16b0cea - idle-monitor: XSyncValue related compile-time warnings