idle-monitor: XSyncValue related compile-time warnings

Avoid aggregate return warnings by transforming the _int64_to_xsyncvalue
function into a macro.

gnome-idle-monitor.c: In function '_int64_to_xsyncvalue':
gnome-idle-monitor.c:80:1: warning: function returns an aggregate [-Waggregate-return]
gnome-idle-monitor.c: In function '_xsync_alarm_set':
gnome-idle-monitor.c:115:26: warning: function call has aggregate value [-Waggregate-return]

https://bugzilla.gnome.org/show_bug.cgi?id=688189